Spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -191,7 +191,7 @@ body {
 /* Skills */
 .skillsGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 20px));
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 1.5rem;
   justify-content: center;
 }
@@ -375,7 +375,7 @@ body {
 
 .accordion {
   width: 100%;
-  max-width: 900px;
+  max-width: 1100px;
 }
 
 .course {
